----------------------------------------------------------------------
Version 0.1.1 (rgerhards), 2011-07-??
- added new API functions:
  * es_newStrFromNumber(),
  * es_str2num()
  * es_strncmp()
  * es_strContains()
----------------------------------------------------------------------
Version 0.1.0 (rgerhards), 2010-12-09
Initial public release.